# bevy_mod_scripting

./: Cargo.toml
assets/proto_assets/: multiple_events.prototype.ron
bevy_mod_scripting_core/src/: hosts.rs  systems.rs
bevy_script_api/: Cargo.toml
bevy_script_api/src/: lib.rs
examples/rhai/: multiple_events_rhai_proto.rs
languages/bevy_mod_scripting_rhai/src/: lib.rs
languages/bevy_mod_scripting_rune/: Cargo.toml  readme.md
languages/bevy_mod_scripting_rune/src/: assets.rs  lib.rs
languages/bevy_mod_scripting_rune_derive/: Cargo.toml
languages/bevy_mod_scripting_rune_derive/src/: lib.rs  rune_method.rs
